# automata

./: .gitignore  Cargo.toml  dashboard_config.json  filter_config.yaml
dashboard/: Cargo.toml
dashboard/src/: main.rs
migrations/: 0001_genesis.sql  0002_indexes.sql  0003_bot_trades.sql  0004_bot_trades_exit_mcap.sql
sips/: Cargo.toml
sips/ix_macros/: Cargo.toml
sips/ix_macros/src/: lib.rs
sips/src/: address.rs  helper.rs  lib.rs  solana_adapter.rs
sips/src/instructions/: account.rs  error.rs  mod.rs  raw_instruction.rs
sips/src/instructions/associated_token_program/: mod.rs
sips/src/instructions/compute_budget/: mod.rs
sips/src/instructions/pump/: accounts.rs  instructions.rs
sips/src/instructions/system_program/: mod.rs
sips/src/instructions/token_program_2022/: mod.rs
src/: address.rs  helper.rs  lib.rs  main.rs
src/autobuy/: broker.rs  broker_mock.rs  manager.rs  mod.rs  performance_tracker.rs  positions.rs  pump_brocker.rs
src/autobuy/filters/: config.rs  creator.rs  mod.rs
src/feed/: feed.rs  logs_feed.rs  mod.rs
src/feed/logs/: log.rs  mod.rs  pump.rs  pump_amm.rs
src/generalize/: general_commands.rs  general_pool.rs  generalizer.rs  mod.rs
src/generalize/adapters/: pump.rs
src/generalize/niche/: mod.rs  pump_amm_generalizer.rs
src/launchpads/: mod.rs  token_bucket.rs
src/launchpads/pump/: general.rs  handler.rs  launchpad.rs  mod.rs  pool.rs
src/persistence/: bot_trades.rs  creators.rs  error.rs  mod.rs  tokens.rs  traders.rs
src/persistence/postgres/: bot_trades.rs  creators.rs  mod.rs  tokens.rs  traders.rs
src/pipelines/: pump.rs
src/setup/: mod.rs  waiter.rs
src/trading/: mod.rs  offer.rs  swarm.rs  trader.rs
